[tool.poetry]
name = "nyt_recipe"
version = "1.0.0"
authors = ["Ian Brault <ian@brault.dev>"]
description = "Downloads recipes from the NYT Cooking website and converts them into an Apple Notes-compatible format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ianbrault/nyt_recipe"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"

[tool.poetry.scripts]
nyt_recipe = "nyt_recipe.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
